kubernetes-adv-deployments/part-11-ingress-aws/my-eks-cluster-ingress/ingress-hosts.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-hosts
  labels:
    name: ingress-hosts
spec:
  rules:
  - host: www.notjustdevops.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: main
            port: 
              number: 5000
  - host: web1.notjustdevops.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: web1
            port: 
              number: 5000
  - host: web2.notjustdevops.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: web2
            port: 
              number: 27017
  - host: tomcat.notjustdevops.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: tomcat
            port: 
              number: 8080
